--- a/index.html
+++ b/index.html
@@ -8,23 +8,19 @@
     <!-- Import Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-
 <style>
 
-/* --------------------------------------------------------
-   🎨 SISTEMA DE TEMAS
--------------------------------------------------------- */
+/* ------------------------------
+   SISTEMA DE TEMAS
+--------------------------------*/
 
-/* Tema claro (default) */
+/* Tema claro */
 :root {
   --bg: #ffffff;
   --text: #222;
   --card: #f1f1f1;
   --primary: #4a90e2;
   --accent: #6ac47e;
-
-  --accent-2: #7bd3ff;
-  --muted: #557286;
 }
 
 /* Tema oscuro */
@@ -34,164 +30,281 @@
   --card: #1c1c1c;
   --primary: #8ab4f8;
   --accent: #4dd0e1;
-
-  --accent-2: #4dd0e1;
-  --muted: #a1b7c9;
 }
 
 /* Tema colorido */
 .theme-colorful {
-  --bg: #fff0f7;
+  --bg: #fff8e8;
   --text: #222;
-  --card: #ffe7f2;
-  --primary: #ff6f61;
-  --accent: #ffca28;
-
-  --accent-2: #ff7eb8;
-  --muted: #a44c7a;
+  --card: #ffe7a1;
+  --primary: #ff7b72;
+  --accent: #6bcdfd;
 }
 
-/* --------------------------------------------------------
-   🧱 BASE
--------------------------------------------------------- */
-
-* { box-sizing: border-box; }
-html, body { height: 100%; }
-
+/* Aplicar variables */
 body {
-  margin: 0;
-  padding: 18px;
-  font-family: "Poppins", system-ui;
   background: var(--bg);
   color: var(--text);
   transition: background .3s, color .3s;
-  display: flex;
-  justify-content: center;
 }
 
-/* --------------------------------------------------------
-   📦 CONTENEDOR PRINCIPAL
--------------------------------------------------------- */
-
-.container {
-  width: 100%;
-  max-width: 720px;
+.container, .card, .panel {
   background: var(--card);
-  border-radius: 14px;
-  padding: 16px;
-  box-shadow: 0 18px 60px rgba(10,30,60,0.06);
-  margin-bottom: 80px;
-}
-
-/* --------------------------------------------------------
-   🏷️ TÍTULOS
--------------------------------------------------------- */
-
-.title { font-size: 22px; font-weight: 800; margin-bottom: 6px; }
-.subtitle { font-size: 15px; color: var(--muted); margin-bottom: 12px; }
-
-/* --------------------------------------------------------
-   🔘 BOTONES
--------------------------------------------------------- */
-
-.btn {
-  width: 100%;
-  padding: 12px 14px;
-  border-radius: 12px;
-  border: none;
-  background: linear-gradient(90deg, var(--accent-2), var(--primary));
-  box-shadow: 0 8px 24px rgba(68,170,255,0.08);
-  cursor: pointer;
-  font-size: 15px;
-  font-weight: 700;
-  color: #fff;
-  transition: transform .12s ease, opacity .12s ease-in-out;
-}
-
-.btn:hover {
-  transform: scale(1.02);
-  opacity: .9;
-}
-
-.btn.secondary {
-  background: #ffffff;
-  border: 1px solid rgba(10,40,80,0.06);
   color: var(--text);
+  transition: background .3s, color .3s;
 }
 
-.btn.small {
-  width: auto;
-  padding: 8px 12px;
-}
-
-/* --------------------------------------------------------
-   👥 JUGADORES
--------------------------------------------------------- */
-
-.players-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 8px;
-  margin-top: 10px;
-}
-
-@media (max-width: 520px) {
-  .players-grid { grid-template-columns: 1fr; }
-}
-
-.player-btn {
-  padding: 12px;
-  border-radius: 10px;
-  background: linear-gradient(180deg,#f0fbff,#eef9ff);
-  border: 1px solid rgba(10,70,110,0.04);
-  cursor: pointer;
-  font-weight: 700;
-}
-
-/* --------------------------------------------------------
-   🔍 REVEAL BOX
--------------------------------------------------------- */
-
-.revealBox {
-  padding: 18px;
+/* Botones */
+button {
+  background: var(--primary);
+  border: none;
+  color: #fff;
+  padding: 14px 20px;
   border-radius: 12px;
+  font-size: 17px;
+  font-weight: bold;
+  width: 100%;
+  margin-top: 8px;
+}
+
+button:hover {
+  opacity: .85;
+}
+
+/* Botón secundario */
+button.secondary {
+  background: var(--accent);
+}
+
+/* ---------------------------------------
+   BASE COMPLETA / DISEÑO GENERAL
+---------------------------------------- */
+
+:root{
+  --bg: #f7fbff;
+  --card: #ffffff;
+  --accent: #44aaff;
+  --accent-2: #7bd3ff;
+  --text: #062a44;
+  --muted: #557286;
+  --success: #2ecc71;
+  --danger: #ff6b6b;
+}
+
+*{box-sizing:border-box}
+html,body{height:100%}
+body{
+  margin:0; padding:18px;
+  font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  background: linear-gradient(180deg,var(--bg),#eef7ff);
+  color:var(--text);
+  display:flex;
+  justify-content:center;
+}
+
+/* CONTENEDOR */
+.container{
+  width:100%;
+  max-width:720px;
+  background: var(--card);
+  border-radius:14px;
+  box-shadow: 0 18px 60px rgba(10,30,60,0.06);
+  padding:16px;
+  margin-bottom:24px;
+}
+
+/* TITULOS */
+.title{ font-size:20px; font-weight:800; color:var(--text); margin-bottom:6px }
+.subtitle{ font-size:15px; color:var(--muted); margin-bottom:12px }
+
+/* TARJETAS */
+.card{
+  background: linear-gradient(180deg,#fff,#fbfdff);
+  border-radius:12px;
+  padding:12px;
+  border:1px solid rgba(10,40,80,0.03);
+  box-shadow: 0 6px 20px rgba(8,30,60,0.03);
+}
+
+/* INPUTS */
+.input, select, textarea{
+  width:100%;
+  padding:12px;
+  border-radius:10px;
+  border:1px solid rgba(15,50,90,0.06);
+  font-size:14px;
+  color:var(--text);
+  background: #fff;
+}
+textarea{ min-height:120px; resize:vertical }
+
+/* BOTONES */
+.btn{
+  display:inline-block;
+  padding:12px 14px;
+  border-radius:12px;
+  border:none;
+  background: linear-gradient(90deg,var(--accent-2),var(--accent));
+  color:#00223a;
+  font-weight:800;
+  cursor:pointer;
+  font-size:14px;
+  width:100%;
+  box-shadow: 0 8px 24px rgba(68,170,255,0.08);
+}
+.btn.secondary{
+  background:#fff;
+  border:1px solid rgba(10,40,80,0.06);
+  color:var(--text);
+}
+.btn.small{ padding:10px; font-size:13px; width:auto }
+
+/* GRID DE JUGADORES */
+.players-grid{
+  display:grid;
+  grid-template-columns: repeat(2,1fr);
+  gap:8px;
+  margin-top:8px;
+}
+@media (max-width:520px){
+  .players-grid{ grid-template-columns:1fr }
+}
+
+.player-btn{
+  padding:12px;
+  border-radius:10px;
+  background: linear-gradient(180deg,#f0fbff,#eef9ff);
+  border:1px solid rgba(10,70,110,0.04);
+  cursor:pointer;
+  font-weight:700;
+  text-align:left;
+}
+
+/* CAJA DE PALABRA / IMPOSTOR */
+.revealBox{
+  padding:18px;
+  border-radius:12px;
   background: linear-gradient(180deg,#fff7e6,#fffaf0);
-  border: 1px solid rgba(10,40,80,0.04);
-  font-weight: 900;
-  font-size: 20px;
-  text-align: center;
-  min-height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border:1px solid rgba(10,40,80,0.04);
+  font-weight:900;
+  font-size:20px;
+  text-align:center;
+  min-height:70px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 
-/* --------------------------------------------------------
-   🎨 PREVIEW TAGS
--------------------------------------------------------- */
-
-.preview {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin-top: 10px;
+/* PREVIEW */
+.preview{ display:flex; flex-wrap:wrap; gap:8px; margin-top:8px }
+.preview .tag{
+  padding:6px 10px;
+  border-radius:8px;
+  background:linear-gradient(90deg,#ecf9ff,#f8fbff);
+  font-size:13px;
+  border:1px solid rgba(10,70,110,0.04)
 }
 
-.preview .tag {
-  padding: 6px 10px;
-  border-radius: 8px;
-  background: linear-gradient(90deg,#ecf9ff,#f8fbff);
-  font-size: 13px;
-  border: 1px solid rgba(10,70,110,0.04);
+/* FOOTER */
+.footer{
+  position:fixed;
+  left:0;
+  right:0;
+  bottom:6px;
+  display:flex;
+  justify-content:center;
+  pointer-events:none;
+}
+.footer .inner{
+  background:transparent;
+  color:var(--muted);
+  font-size:13px;
+  pointer-events:auto;
+  padding:6px 12px;
+  border-radius:10px;
 }
 
-/* --------------------------------------------------------
-   🎨 THEME SELECTOR
--------------------------------------------------------- */
+/* TEMA COLORIDO */
+body.theme-colorful{
+  background: linear-gradient(180deg,#fff0f7,#f0fff4);
+}
+body.theme-colorful .container{
+  background: linear-gradient(180deg, rgba(255,255,255,0.92), rgba(255,255,255,0.85));
+  backdrop-filter: blur(6px);
+}
+body.theme-colorful .btn{
+  background: linear-gradient(90deg,#ff6f61,#ffca28);
+  color:#fff;
+}
+body.theme-colorful .player-btn{
+  background: linear-gradient(90deg,#fff0f6,#fff7ea);
+  border:1px solid rgba(255,110,97,0.08)
+}
+body.theme-colorful .preview .tag{
+  background: linear-gradient(90deg,#fff0f6,#fff7ea);
+  border:1px solid rgba(255,110,97,0.08)
+}
+body.theme-colorful .revealBox{
+  background: linear-gradient(90deg,#fff7e6,#fff1f8)
+}
+
+/* ===========================
+   RESPONSIVE FIX DEFINITIVO
+   =========================== */
+@media (max-width: 768px) {
+
+  body {
+    padding: 10px;
+    display: block;
+  }
+
+  .container {
+    width: 100%;
+    margin: 0 auto 20px auto;
+  }
+
+  /* TODAS LAS SECCIONES A BLOQUE */
+  .section,
+  .step,
+  .panel,
+  .config-box,
+  .players-grid-box {
+    width: 100% !important;
+    max-width: 100% !important;
+    margin: 0 auto 20px auto !important;
+    display: block !important;
+  }
+
+  /* BOTONES */
+  .btn,
+  button {
+    width: 100% !important;
+    margin: 10px 0 !important;
+  }
+
+  /* INPUTS */
+  select,
+  input,
+  textarea {
+    width: 100% !important;
+  }
+
+  /* GRILLA */
+  .players-grid {
+    grid-template-columns: 1fr !important;
+  }
+
+  /* FOOTER */
+  .footer {
+    position: relative !important;
+    bottom: 0 !important;
+    margin-top: 40px !important;
+  }
+}
 
 .theme-box {
+  margin: 15px auto;
   text-align: center;
-  margin-bottom: 15px;
 }
 
 .theme-box select {
@@ -201,49 +314,6 @@ body {
   background: var(--card);
   color: var(--text);
   border: 2px solid var(--primary);
-}
-
-/* --------------------------------------------------------
-   💖 FOOTER FIJO
--------------------------------------------------------- */
-
-.footer {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 10px;
-  text-align: center;
-}
-
-.footer .inner {
-  font-size: 13px;
-  color: var(--muted);
-}
-
-/* --------------------------------------------------------
-   🌈 MODO COLORIDO
--------------------------------------------------------- */
-
-body.theme-colorful {
-  background: linear-gradient(180deg, #fff0f7, #f0fff4);
-}
-
-body.theme-colorful .btn {
-  background: linear-gradient(90deg,#ff6f61,#ffca28);
-  color: #fff;
-}
-
-body.theme-colorful .player-btn {
-  background: linear-gradient(90deg,#fff0f6,#fff7ea);
-  border-color: rgba(255,110,97,0.08);
-}
-
-body.theme-colorful .preview .tag {
-  background: linear-gradient(90deg,#fff0f6,#fff7ea);
-}
-
-body.theme-colorful .revealBox {
-  background: linear-gradient(90deg,#fff7e6,#fff1f8);
 }
 
 </style>
